name:          wplc
version:       0.1
cabal-version: >= 1.10
copyright:     (c) 2013 Microsoft
author:        Gordon Stewart <jsseven@cs.princeton.edu>
               Dimitrios Vytiniotis <dimitris@microsoft.com>
               Bozidar Radunovic <bozidar@microsoft.com>
               Geoffrey Mainland <mainland@cs.drexel.edu>
               Mahanth Gowda <gowda2@illinois.edu>
stability:     alpha
category:      Language
synopsis:      Compiler for the WPL language.
tested-with:   GHC==7.8.3

description:
  This package provides a compiler for the WPL language.

build-type: Simple

Executable wplc
  hs-source-dirs:   src src/BasicTypes src/Codegen src/Optimize
                    src/Pipeline src/Typecheck src/Utils src/Vectorize
                    src/Analysis src/ComputeType
  main-is:          Main.hs
  -- TODO: We should use a proper module hierarchy and only have 'src' 
  -- as the include dir.
  default-language: Haskell98
  other-modules:
    Language.Ziria.Parser.Lexer
    Language.Ziria.Parser.CamlParser
    Language.Ziria.Parser.Parser

  default-extensions: DoAndIfThenElse PatternGuards NoMonomorphismRestriction
  other-extensions: TemplateHaskell, QuasiQuotes

  build-depends:
    array                  >= 0.2   && < 0.6,
    base                   >= 4     && < 5,
    bytestring             >= 0.10  && < 0.11,
    containers             >= 0.4   && < 0.6,
    dlist                  >= 0.6   && < 0.8,
    directory              >= 1.2   && < 1.3,
    language-c-quote       >= 0.11  && < 0.12,
    mainland-pretty        >= 0.4   && < 0.5,
    mtl                    >= 2.0   && < 3,
    pretty                 >= 1.1.2 && < 1.2,
    srcloc                 >= 0.5.1 && < 0.6,
    symbol                 >= 0.1   && < 0.3,
    transformers           >= 0.3   && < 0.5,
    hashable               >= 1.2   && < 1.3,
    time                   >= 1.4   && < 1.6,
    pretty-show            >= 1.6.9 && < 1.7,
    syb                    >= 0.4   && < 0.7,
    deepseq                >= 1.4   && < 1.5,

    -- deepseq-generics is needed for deepseq < 1.4
    -- deepseq-generics       >= 0.1   && < 0.2,
    text                   >= 1.1   && < 1.3,
    exception-transformers >= 0.3   && < 0.5,
    -- template-haskell is bundled with ghc; don't insist on a version
    template-haskell,
    ghc-prim

  -- Process 1.1 doesn't build with GHC 7.8
  if impl(ghc >= 7.8)
    build-depends:
      process              >= 1.2 && < 1.5
  else
    build-depends:
      process              >= 1.1 && < 1.2

  ghc-options: -fwarn-incomplete-patterns -Werror 
               -- For profiling
               -threaded -fprof-auto 
               -rtsopts
               -- "-with-rtsopts=-N -p -s -hy -i0.1"

  build-tools: alex, happy

Executable BlinkDiff
  hs-source-dirs:   tools
  main-is:          BlinkDiff.hs

  default-language: Haskell98

  default-extensions: DoAndIfThenElse PatternGuards

  build-depends:
    base                   >= 4     && < 5,
    containers             >= 0.4   && < 0.6,
    parsec                 >= 3.1.7 && < 3.2

  ghc-options: -fwarn-incomplete-patterns -Werror
